# RealtimeGym

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  pyproject.toml  run_game.py  test_new_api.py
.github/workflows/: pr-checks.yml
configs/: example-deepseek-v3.2-planning.yaml  example-gemini-2.5-flash-planning.yaml  example-gemini-2.5-flash-reactive.yaml  example-gemini-2.5-pro-planning.yaml  example-gemini-2.5-pro-reactive.yaml  example-gpt-5-mini-planning.yaml  example-gpt-5-mini-reactive.yaml  example-o3-planning.yaml  example-o3-reactive.yaml  example-prompts.yaml
configs/prompts/: freeway.py  overcooked.py  snake.py
examples/: README.md  all_environments.py  basic_renderer.py  basic_usage.py  budget_format.py  custom_agent.py  difficulty_levels.py
render/: freeway_render.py  overcooked_render.py  snake_render.py  visualize_trajectory.py
src/: game_loop.py  loop.py  main.py  run.py
src/agent/: agile.py  base.py  planning.py  reactive.py
src/environment/: base.py  freeway.py  overcooked.py  snake.py
src/environment/overcooked_new/: Overcooked_Env.py
src/environment/overcooked_new/script_agent/: script_agent.py  script_period.py  utils.py
src/environment/overcooked_new/src/overcooked_ai_py/: utils.py
src/environment/overcooked_new/src/overcooked_ai_py/agents/: agent.py  benchmarking.py
src/environment/overcooked_new/src/overcooked_ai_py/data/layouts/: cc_easy.layout  cc_insane.layout  cc_medium.layout
src/environment/overcooked_new/src/overcooked_ai_py/data/planners/: __init__.py
src/environment/overcooked_new/src/overcooked_ai_py/mdp/: layout_generator.py  overcooked_env.py  overcooked_mdp.py
src/environment/overcooked_new/src/overcooked_ai_py/planning/: planners.py
src/environment/overcooked_new/testing/: agent_test.py  mdp_gen_schedule_test.py  overcooked_test.py  planners_test.py  utils.py
src/envs/: freeway.py
src/realtimegym/: __init__.py  agile_eval.py
src/realtimegym/agents/: agile.py  base.py  planning.py  reactive.py
src/realtimegym/environments/: base.py  freeway.py  overcooked.py  snake.py
src/realtimegym/environments/overcooked_new/: Overcooked_Env.py  THIRD_PARTY_NOTICE.md  config.py
src/realtimegym/environments/overcooked_new/.github/workflows/: pythonlint.yml
src/realtimegym/environments/overcooked_new/script_agent/: base.py  script_agent.py  script_period.py  utils.py
src/realtimegym/environments/overcooked_new/src/overcooked_ai_py/: utils.py
src/realtimegym/environments/overcooked_new/src/overcooked_ai_py/agents/: agent.py  benchmarking.py
src/realtimegym/environments/overcooked_new/src/overcooked_ai_py/mdp/: actions.py  layout_generator.py  overcooked_env.py  overcooked_mdp.py  overcooked_trajectory.py
src/realtimegym/environments/overcooked_new/src/overcooked_ai_py/planning/: planners.py  search.py
src/realtimegym/environments/overcooked_new/testing/: agent_test.py  mdp_gen_schedule_test.py  overcooked_test.py  planners_test.py  utils.py  visualization_test.py
src/realtimegym/environments/prompts/: freeway.py  overcooked.py  snake.py
src/realtimegym/environments/render/: freeway_render.py  overcooked_render.py  snake_render.py
src/realtimegym/prompts/: __init__.py  freeway.py  freeway.yaml  overcooked.py  overcooked.yaml  snake.py  snake.yaml
src/utils/: client_utils.py
tests/: README.md  __init__.py  test_agents.py  test_environments.py
(+13 files in other folders)
