[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "realtimegym"
version = "0.1.0"
authors = [
  { name="wenyl", email="wenyl22@mails.tsinghua.edu.cn" },
]
description = "A real-time gym for evaluating language agents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gym==0.26.2",
    "imageio==2.37.0",
    "ipython==8.12.3",
    "ipywidgets==8.1.5",
    "numpy==1.26.4",
    "openai==1.95.1",
    "pandas==2.3.3",
    "pygame==2.6.1",
    "scipy==1.16.0",
    "setuptools==79.0.0",
    "tqdm==4.66.2",
    "transformers==4.51.3",
]

[project.urls]
"Homepage" = "https://github.com/wenyl22/RealtimeGym"
"Bug Tracker" = "https://github.com/wenyl22/RealtimeGym/issues"